sumo/tests/duarouter/flows/errors/testsuite.duarouter
# Vehicle's departlane is false
vehicle_false_departlane

# Vehicle's departpos is false
vehicle_false_departpos

# Vehicle's departspeed is false
vehicle_false_departspeed

# Vehicle's arrivallane is false
vehicle_false_arrivallane

# Vehicle's arrivalpos is false
vehicle_false_arrivalpos

# Vehicle's arrivalspeed is false
vehicle_false_arrivalspeed
